Update and regenerate controllers based on updated version of api spec
