# be/src/main/java/ydgrun/info/qnotes3/controllers/NotesController.java
@@ -2,16 +2,15 @@ package ydgrun.info.qnotes3.controllers;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import ydgrun.info.qnotes3.api.ApiApi;
+import ydgrun.info.qnotes3.api.NotesApi;
 import ydgrun.info.qnotes3.model.Note;
 import ydgrun.info.qnotes3.model.NoteRequest;
 import ydgrun.info.qnotes3.model.NotesResponse;
-import ydgrun.info.qnotes3.model.Statistics;
 
 import java.util.UUID;
 
 @RestController
-public class NotesController implements ApiApi {
+public class NotesController implements NotesApi {
 
     @Override
     public ResponseEntity<Note> createNote(NoteRequest noteRequest) {
@@ -34,12 +33,6 @@ public class NotesController implements ApiApi {
     @Override
     public ResponseEntity<NotesResponse> getNotes(Integer page, String priority, String dateRange) {
         // TODO: Implement notes listing logic with filtering
-        throw new UnsupportedOperationException("Not implemented yet");
-    }
-
-    @Override
-    public ResponseEntity<Statistics> getStatistics() {
-        // TODO: Implement statistics calculation logic
         throw new UnsupportedOperationException("Not implemented yet");
     }
 
